<resources>
    <string name="app_name">Track My Health</string>

    //  widget
    <string name="add_to_widget">Add to Widget</string>
    <string name="healthdata_pref_key">WIDGET_HEALTHDATA_KEY</string>
    <string name="healthdata_unavailable">Health Data data not available.Please wait or try again later.</string>

    // Splash

    // Landing Page
    <string name="title_landing">Welcome to Track My Health</string>
    <string name="description_landing">Monitor your health by recording key health indicators and tracking your progress over the years. Make a note of all current medications.</string>
    <string name="signup_landing">Sign Up</string>

    //  SignUp Page
    <string name="title_sign_up">Create a new account</string>
    <string name="profile_image_sign_up">Add a Picture</string>
    <string name="profile_picture">ProfilePicture</string>
    <string name="first_name_sign_up">FirstName</string>
    <string name="last_name_sign_up">LastName</string>
    <string name="dob_sign_up">DOB (mm/dd/yyyy)</string>
    <string name="email_sign_up">Email</string>
    <string name="ice_name_sign_up">ICE Name</string>
    <string name="ice_phone_number_sign_up">ICE PhoneNumber</string>
    <string name="gender">Gender</string>
    <string name="gender_male_sign_up">Male</string>
    <string name="gender_female_sign_up">Female</string>
    <string name="height_sign_up">Height (in cm)</string>
    <string name="weight_sign_up">Weight (in lb)</string>
    <string name="title_pcp_sign_up">PCP Info:</string>
    <string name="pcp_name_sign_up">Name</string>
    <string name="pcp_address_sign_up">Address</string>
    <string name="pcp_city_sign_up">City</string>
    <string name="pcp_state_sign_up">State</string>
    <string name="pcp_zip_sign_up">ZipCode</string>
    <string name="pcp_phone_sign_up">Phone</string>
    <string name="add_account_sign_up">Sign Up</string>



    //  Profile Page
    <string name="profile_image">Profile Picture</string>
    <string name="profile_full_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_dob">BirthDay</string>
    <string name="profile_ice">ICE</string>
    <string name="profile_ice_phone">ICE Phone</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_height">Height</string>
    <string name="profile_weight">Weight</string>
    <string name="profile_pcp_title">PCP Information</string>
    <string name="edit_profile">Edit Profile</string>

    // Medication DB

    // weight units spinner resources

    // height units spinner resources


    <string name="settings">Settings</string>
    <string name="weight_key">WEIGHT_KEY</string>
    <string name="pounds">lb</string>
    <string name="pounds_value">lb_value</string>
    <string name="kilograms">kg</string>
    <string name="kilograms_value">kg_value</string>

    <string name="height_key">HEIGHT_KEY</string>
    <string name="centimeters">cm</string>
    <string name="centimeters_value">cm_value</string>
    <string name="inches">in</string>
    <string name="inches_value">in_value</string>

    //  options screen
    <string name="profile_screen">My Profile</string>
    <string name="journal_screen">Journal</string>
    <string name="medications_screen">Medications</string>
    <string name="doc_visit_screen">Log Doctor Visit</string>
    <string name="settings_screen">Settings</string>

    //  Add Medication screen
    <string name="title_add_medication">Add new medication</string>
    <string name="med_name">Medicine Name</string>
    <string name="med_dose">Medicine Dose</string>
    <string name="med_unit">Medicine Unit</string>
    <string name="med_frequency">Medicine Frequency</string>
    <string name="med_add">Add Medicine</string>
    <string name="metformin">Metformin</string>
    <string name="dose">500</string>
    <string name="mg">mg</string>
    <string name="once_a_day">once a day</string>
    <string name="update">Update</string>
    <string name="edit_medication">Edit Medication</string>
    <string name="rx_api">https://rxnav.nlm.nih.gov/REST/approximateTerm?</string>

    //  Add Health Data screen
    <string name="title_add_health_data">Log Health Data</string>
    <string name="physician_name">Physician Name</string>
    <string name="date_of_visit">DateVisited (mm/dd/yyyy)</string>
    <string name="a1c">A1C (mg/dL)</string>
    <string name="blood_sugar">Blood Sugar (mg/dL)</string>
    <string name="trigycerides">Triglycerides (mg/dL)</string>
    <string name="weight">Weight (lb)</string>
    <string name="HDL">HDL (mg/dL)</string>
    <string name="LDL">LDL (mg/dL)</string>
    <string name="add_health_data">Log Data</string>
    <string name="health_value">5.2mg/dL</string>
    <string name="health_journal">Health Journal</string>
    <string name="background">Background Image</string>
    <string name="mapButton">Map Button</string>
    <string name="med_name_search">*enter 5 characters of medicine name and hit Search icon</string>
    <string name="med_name_required">Medication Name is required</string>
    <string name="med_dose_required">Medication Dose is required</string>
    <string name="med_unit_required">Medication Unit is required</string>
    <string name="med_freq_required">Medication Frequency is required</string>
    <string name="save_med_crash">Saving Medication :</string>
    <string name="search_med_nav_crash">Searching RxNav for medication name :</string>
    <string name="edit_med_crash">Editing Medication :</string>
    <string name="no_med_found">No drugs</string>
    <string name="med_not_found_user_displ">No matching medicine found</string>
    <string name="med_dose_eg">eg 32.5 / 100 / 500</string>
    <string name="med_unit_eg">eg mg/gm/IU</string>
    <string name="med_freq_eg">eg once a day / twice a week</string>
    <string name="save_profile">Save</string>
    <string name="network_unavailable">Please verify network connection and try again.</string>


</resources>
