<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_sign_up"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/large_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_sign_up" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_sign_up" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_signup" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_sign_up" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/gender_male"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/gender_male_sign_up" />

                <RadioButton
                    android:id="@+id/gender_female"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_female_sign_up" />
            </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/height_sign_up" />

<!--            <spinner-->
<!--                android:id="@+id/height_unit_spinner"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_height="wrap_content" />-->

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight_sign_up" />
<!--                <spinner-->
<!--                    android:id="@+id/weight_unit_spinner"-->
<!--                    android:layout_weight="1"-->
<!--                    android:layout_height="wrap_content" />-->


            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dob_sign_up"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_pcp_sign_up"
                    android:textSize="@dimen/extra_large_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pcp_name_sign_up"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pcp_address_sign_up"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pcp_city_sign_up"/>
                <spinner>
                    android:id="@+id/country_sign_up_spinner"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                </spinner>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pcp_phone_sign_up"/>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_account_sign_up"/>


        </LinearLayout>

    </ScrollView>
</LinearLayout>