<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MedicationEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/med_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border"
            android:hint="@string/med_name"
            android:inputType="text"
            android:padding="20dp" />

        <EditText
            android:id="@+id/med_dose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border"
            android:hint="@string/med_dose"
            android:inputType="textEmailAddress"
            android:padding="20dp" />

        <EditText
            android:id="@+id/med_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border"
            android:hint="@string/med_unit"
            android:inputType="phone"
            android:padding="20dp" />

        <EditText
            android:id="@+id/med_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border"
            android:hint="@string/med_frequency"
            android:inputType="number"
            android:padding="20dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/border_back"
            android:padding="20dp"
            android:text="@string/med_add" />
    </LinearLayout>
</ScrollView>