<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/extra_large_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/medication_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metformin"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/extra_large_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dose" />

                <TextView
                    android:id="@+id/unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mg" />

                <TextView
                    android:id="@+id/frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/once_a_day" />

            </LinearLayout>
        </LinearLayout>


        <ImageView
            android:id="@+id/edit_Image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_edit_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/edit_medication"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>