<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/extra_large_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_of_visit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="clip_horizontal|center|clip_vertical"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/extra_large_text"
                    android:textStyle="bold"
                    tools:text="@string/date_of_visit" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/a1c_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/a1c"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/extra_large_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/a1c_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/health_value" />
            </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/bloodsugar_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/blood_sugar"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/extra_large_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bloodsugar_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/health_value" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/trig_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/trigycerides"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/extra_large_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/trig_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/health_value" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/weight_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/weight"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/extra_large_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/weight_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/health_value" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/hdl_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/HDL"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/extra_large_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hdl_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/health_value" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ldl_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/LDL"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/extra_large_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ldl_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/health_value" />
            </LinearLayout>
        </LinearLayout>


<!--        <ImageView-->
<!--            android:id="@+id/edit_Image"-->
<!--            android:layout_width="20dp"-->
<!--            android:layout_height="20dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:layout_marginRight="16dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:src="@drawable/ic_edit_black_24dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.0"-->
<!--            android:contentDescription="@string/edit_medication"/>-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>