<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.OptionsActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/options_layout">
    <include layout="@layout/app_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/profile_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/extra_large_padding"
                android:layout_margin="@dimen/extra_large_padding"
                android:text="@string/profile_screen"
                android:textSize="@dimen/extra_large_text"
                android:background="@drawable/border_back"
                />

            <Button
                android:id="@+id/journal_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/extra_large_padding"
                android:layout_margin="@dimen/extra_large_padding"
                android:text="@string/journal_screen"
                android:textSize="@dimen/extra_large_text"
                android:background="@drawable/border_back"
                />

            <Button
                android:id="@+id/medications_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/extra_large_padding"
                android:layout_margin="@dimen/extra_large_padding"
                android:text="@string/medications_screen"
                android:textSize="@dimen/extra_large_text"
                android:background="@drawable/border_back"
                />

<!--            <Button-->
<!--                android:id="@+id/doctor_visit_button"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="@dimen/extra_large_padding"-->
<!--                android:layout_margin="@dimen/extra_large_padding"-->
<!--                android:text="@string/doc_visit_screen"-->
<!--                android:textSize="@dimen/extra_large_text"-->
<!--                android:background="@drawable/border_back"-->
<!--                />-->

<!--            <Button-->
<!--                android:id="@+id/settings_button"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="@dimen/extra_large_padding"-->
<!--                android:layout_margin="@dimen/extra_large_padding"-->
<!--                android:text="@string/settings_screen"-->
<!--                android:textSize="@dimen/extra_large_text"-->
<!--                android:background="@drawable/border_back"-->
<!--                />-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>
